@@ -1,6 +1,6 @@
-import static org.gradle.api.JavaVersion.VERSION_17
+import static org.gradle.api.JavaVersion.VERSION_11
 import static org.gradle.jvm.toolchain.JavaLanguageVersion.of
-import static org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_17
+import static org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_11
 import static org.jetbrains.kotlin.gradle.dsl.KotlinVersion.KOTLIN_1_8
 import org.jetbrains.dokka.gradle.DokkaTask
 
@@ -36,8 +36,7 @@ tasks.named("wrapper") {
     distributionType = Wrapper.DistributionType.BIN
 }
 
-def javaVersion = VERSION_17
-def javaVersionNumber = javaVersion.majorVersion.toInteger()
+def javaVersion = VERSION_11
 
 snyk {
     api = project.findProperty("snykApiToken") ?: System.getenv('SNYK_TOKEN')
@@ -52,31 +51,26 @@ allprojects {
     pluginManager.withPlugin('java') {
         java {
             toolchain {
-                languageVersion = of(javaVersionNumber)
+                languageVersion = of(17)
             }
 
             withSourcesJar()
         }
 
         tasks.withType(JavaCompile).configureEach {
-            options.release = javaVersionNumber
+            options.release = 11
             options.encoding = 'UTF-8'
             options.compilerArgs += [ '-XDenableSunApiLintControl', '-parameters' ]
         }
 
         tasks.withType(Test).configureEach {
             useJUnitPlatform(){
-                if (project.hasProperty('runMultiClusterTests')) {
-                    includeTags 'MultiCluster'
-                } else if (project.hasProperty('runUnstableTests')) {
-                    includeTags 'runUnstableTests'
-                } else {
-                    excludeTags 'MultiCluster', 'Unstable'
-                }
+                excludeTags project.hasProperty('runUnstableTests') ? 'runAllTestsNoExclusions' : 'Unstable'
             }
 
             doFirst {
                 systemProperty 'java.io.tmpdir', buildDir.absolutePath
+                jvmArgs '--illegal-access=deny'
             }
         }
     }
@@ -90,16 +84,16 @@ allprojects {
             includeConfigs = ["runtimeClasspath"]
             skipProjects = [rootProject.name]
             destination = file("${buildDir}/reports/SBOM")
-            outputName = "${project.name}-corda-runtime-os-sbom"
+            outputName = "${project.name}-corda-runtime-os-sbom"   
         }
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
         compilerOptions {
-            allWarningsAsErrors = true
+            allWarningsAsErrors = false
             languageVersion = KOTLIN_1_8
             apiVersion = KOTLIN_1_8
-            jvmTarget = JVM_17
+            jvmTarget = JVM_11
             javaParameters = true   // Useful for reflection.
             freeCompilerArgs.addAll([
                 "-Xjvm-default=all"
@@ -116,7 +110,7 @@ allprojects {
     pluginManager.withPlugin('biz.aQute.bnd.builder') {
         tasks.withType(aQute.bnd.gradle.TestOSGi).configureEach {
             javaLauncher = javaToolchains.launcherFor {
-                languageVersion = of(javaVersionNumber)
+                languageVersion = of(javaVersion.getMajorVersion().toInteger())
             }
         }
     }
@@ -150,7 +144,7 @@ allprojects {
         mavenLocal()
 
         maven {
-            url = "${publicArtifactURL}/corda-dependencies-dev"
+            url = "$artifactoryContextUrl/corda-dependencies-dev"
             content {
                 // For Quasar SNAPSHOT.
                 includeGroup 'co.paralleluniverse'
